--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "build": "webpack --mode=production",
     "client": "webpack serve --mode=development",
     "server": "nodemon src/server/index.js",
-    "start": "concurrently \"npm run server\" \"npm run client\" \"json-server --watch db.json --port 3004\" "
+    "start": "concurrently \"npm run server\" \"npm run client\" \"json-server --watch db.json --port 8008\" "
   },
   "author": "Raj Chhatbar",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^5.3.0",
+    "css-loader": "^5.0.1",
     "express": "^4.17.1",
     "json-server": "^0.16.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "prettierrc": "0.0.0-5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "style-loader": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
