--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "babel-loader": "^8.2.2",
     "eslint": "^7.19.0",
     "html-webpack-plugin": "^5.0.0",
+    "node-sass": "^5.0.0",
     "path": "^0.12.7",
-    "webpack": "^5.21.1",
+    "sass": "^1.32.6",
+    "sass-loader": "^11.0.0",
+    "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   }
