:sparkles: Infinite Scroll

--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,8 @@
       "last 1 Android version",
       "last 1 ChromeAndroid version",
       "ie 11"
-    ]
+    ],
+    "esmodules": true
      }
    } ],
    "@babel/preset-react"
