--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^5.3.0",
-    "css-loader": "^5.0.1",
     "express": "^4.17.1",
     "json-server": "^0.16.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "prettierrc": "0.0.0-5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "style-loader": "^2.0.0"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
@@ -29,12 +27,14 @@
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
     "eslint": "^7.19.0",
     "html-webpack-plugin": "^5.0.0",
     "node-sass": "^5.0.0",
     "path": "^0.12.7",
     "sass": "^1.32.6",
     "sass-loader": "^11.0.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
